@@ -1,0 +1,1 @@
+Main.hx:8: characters 9-20 : Foo is missing @:genericBuild meta. Was it removed by a macro?
